refactor: open-weather service & add some styles

--- a/src/app/common/components/input.component.html
+++ b/src/app/common/components/input.component.html
@@ -1,1 +1,7 @@
-<input #input type="text" [value]="value()" [disabled]="disabled()" />
+<input
+  class="input"
+  #input
+  type="text"
+  [value]="value()"
+  [disabled]="disabled()"
+/>
