--- a/src/app/common/components/input.component.scss
+++ b/src/app/common/components/input.component.scss
@@ -1,4 +1,24 @@
 .input {
-  border-radius: 5px;
-  padding: 6px;
+  padding: 10px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+  border-radius: 4px;
+  font-size: 16px;
+
+  &:hover {
+    border-color: #555;
+  }
+
+  &:focus {
+    outline: none;
+    border-color: #007bff;
+    box-shadow: 0 0 8px rgba(0, 123, 255, 0.8);
+  }
+
+  &:disabled {
+    background-color: #f7f7f7;
+    color: #686868;
+  }
 }
